<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lollipop.makeupapp.ui.activity.LoginActivity">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_close"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/register" />
    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/login_head"
            android:background="@drawable/ic_head"
            android:layout_width="130dp"
            android:layout_height="130dp" />

        <android.support.design.widget.TextInputLayout
            android:theme="@style/EditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/username"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_username" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:theme="@style/EditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/password"
                android:theme="@style/EditTextTheme"
                android:inputType="textPassword"
                android:digits="@string/password_limit"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_pass" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@color/loginBtn1"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/login_forget"
            android:layout_gravity="right"
            android:text="@string/forget_pass"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>
