<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/gray_f2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lollipop.makeupapp.ui.activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatImageView
                    app:srcCompat="@drawable/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.AppCompatTextView
                android:gravity="center"
                android:text="@string/setting"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout android:id="@+id/account_manage" style="@style/wrap_layout">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/account_manage"
                    style="@style/text_style" />
                <android.support.v7.widget.AppCompatImageView style="@style/img_style"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/personal_info" style="@style/bottom_layout">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/personal_info"
                    style="@style/text_style" />
                <android.support.v7.widget.AppCompatImageView style="@style/img_style"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dress_up"
                style="@style/wrap_layout">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/dress_up"
                    style="@style/text_style" />
                <android.support.v7.widget.AppCompatImageView style="@style/img_style"/>
            </RelativeLayout>

            <RelativeLayout android:id="@+id/clean_cache" style="@style/wrap_layout">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/clean_cache"
                    style="@style/text_style" />
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/img"
                    style="@style/img_style" />
                <TextView
                    android:id="@+id/cache"
                    android:text="@string/cache_test"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout android:id="@+id/advice" style="@style/mid_layout">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/advice"
                    style="@style/text_style" />
                <android.support.v7.widget.AppCompatImageView style="@style/img_style"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/about_us" style="@style/bottom_layout">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/account_manage"
                    style="@style/text_style" />
                <android.support.v7.widget.AppCompatImageView style="@style/img_style"/>
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/logout"
                android:text="@string/exit_current_account"
                android:textColor="@color/red"
                android:layout_marginTop="40dp"
                app:theme="@style/LogoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</android.support.v7.widget.LinearLayoutCompat>
